--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "serialport",
-  "version": "6.0.4",
+  "version": "6.0.5",
   "description": "Node.js package to access serial ports. Linux, OSX and Windows. Welcome your robotic JavaScript overlords. Better yet, program them!",
   "main": "lib",
   "repository": {
@@ -94,7 +94,7 @@
   "license": "MIT",
   "scripts": {
     "arduino-test": "TEST_PORT=$(./bin/find-arduino.js) npm test",
-    "changelog": "conventional-changelog -i CHANGELOG.md -p angular -s",
+    "changelog": "conventional-changelog -i CHANGELOG.md -s",
     "docs": "jsdoc -c ./.jsdoc.json ",
     "lint": "eslint lib test bin examples",
     "rebuild-all": "npm rebuild && node-gyp rebuild",
