--- a/package.json
+++ b/package.json
@@ -60,7 +60,7 @@
     "commander": "^2.13.0",
     "debug": "^3.1.0",
     "nan": "^2.9.2",
-    "prebuild-install": "^2.4.1",
+    "prebuild-install": "git+https://github.com/saboya/prebuild-install.git#13088c89e34c2c6d8b251600e7c51b3935c622ae",
     "promirepl": "^1.0.1",
     "prompt-list": "^3.1.2",
     "safe-buffer": "^5.0.1"
